--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
   "name": "wishlist-project",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.4.0",
-    "@tanstack/react-query": "^5.62.1",
-    "axios": "^1.7.8",
-    "css-loader": "^7.1.2",
-    "formik": "^2.4.6",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.2",
-    "redux-saga": "^1.3.0",
-    "sass": "^1.81.1",
-    "sass-loader": "^16.0.3",
-    "style-loader": "^4.0.0",
-    "yup": "^1.4.0"
-  },
-  "devDependencies": {
-    "ts-loader": "^9.5.1",
+    "react-scripts": "5.0.1",
     "typescript": "^5.7.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
