--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,38 @@
 {
+  "include": ["src"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
+    "module": "ESNext",
+    "baseUrl": "./src",
+    "paths": {
+      "constants": ["styles/constants.scss"],
+      "jsConstants": ["constants/index.ts"],
+      "api/*": ["api/*"],
+      "store": ["store/index.ts"],
+      "routesConfig": ["routesConfig.ts"],
+      "hooks": ["hooks/index.ts"],
+      "actions/*": ["store/reducers/*"],
+      "utils": ["utils/index.ts"],
+      "types": ["types/index.ts"]
+    },
+//    "plugins": [{
+//      "name": "typescript-plugin-css-modules",
+//      "options": {
+//        "customMatcher": "scss$",
+//        "noUncheckedIndexedAccess": true
+//      }
+//    }],
+    "allowUmdGlobalAccess": true,
+    "jsx": "react-jsx",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "react-jsx"
-  },
-  "include": ["src"]
+    "target": "ES6",
+    "outDir": "dist",
+    "declaration": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "allowUnreachableCode": false // правило ESLint: no-unreachable работает хуже
+  }
 }
