--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "handlebars": "^4.7.8",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.6.3",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.4",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
     "webpack-cli": "^5.1.4"
