--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "plugins": [{
       "name": "typescript-plugin-css-modules",
       "options": {
-        "customMatcher": "scss$",
+        "customMatcher": "\\.scss$",
         "noUncheckedIndexedAccess": true
       }
     }],
