--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 
-REACT_APP_PRODUCTION_URL=https://dellream_wishlist.ru/wishlist
-REACT_APP_DEVELOPMENT_URL=http://localhost:3000/
+REACT_APP_PRODUCTION_URL=http://localhost:8000
+REACT_APP_DEVELOPMENT_URL=http://localhost:8000
