--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "dotenv-webpack": "^8.1.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -47,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "@types/webpack-env": "^1.18.5",
     "handlebars": "^4.7.8",
     "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "^5.6.3",
@@ -54,6 +57,7 @@
     "sass-loader": "^16.0.4",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
